syntax = "proto3";

option go_package = "tsuwari/nats/bots";

message DeleteMessagesRequest {
  string channelId = 1;
  string channelName = 2;
  repeated string messageIds = 3;
}

message SendMessage {
  string channelId = 1;
  optional string channelName = 2;
  string message = 3;
  optional bool keepOrder = 4;
}